[metadata]
name = parking_lot
author = Arnab Pal
author_email = arnab.ee.ju@gmail.com
project_urls =
    Source = https://github.com/arnpal961/parking-lot-pe2
license = MIT
description = SquadStack coding problem for  Product Engineer 2
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.8
include_package_data = true

[tool:pytest]
testpaths = tests
filterwarnings = error

[flake8]
ignore = E266, E502, E722, W503
exclude=
    .git
    .vscode
    __pycache__
    venv
max-line-length = 119
max-complexity = 10
